fix(proposal comments): fix input not in focus on mobile issue

--- a/astro_2.0/components/SideFilter/SideFilter.module.scss
+++ b/astro_2.0/components/SideFilter/SideFilter.module.scss
@@ -21,7 +21,7 @@
     justify-content: flex-end;
     margin: 0 0 32px;
     max-width: initial;
-    top: 176px;
+    top: 124px;
   }
 }
 
